2017-02-20  Dirk Eddelbuettel  <edd@debian.org>

	* man/digest.Rd: Expand example section with a Vectorize() use

2017-01-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* man/digest.Rd: Note that support for 'raw' is not available for all
	hashing algorithms

	* .travis.yml (before_install): Use https for curl fetch

2017-01-26  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version, Date): Release 0.6.12

2017-01-23  Thierry Onkelinx <thierry.onkelinx@inbo.be>

	* NAMESPACE: export sha1.function() and sha1.call()

	* R/sha1.R:
          - sha1() gains methods for the class "function" and "call"
          - sha1() gains a ... argument, currently only relevant for
	    "function"
	  - sha1() takes arguments into account for hash for complex,
   	    Date and array. Note that this will lead to different
            hasheS for these classes and for objects containing
	    these classes

	* man/sha1.rd: update helppage for sha1()

	* tests/sha1Test.R: update unit tests for sha1()

2017-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.11

	* R/sha1.R (sha1.anova): Added more #nocov marks
	* src/sha2.c (SHA256_Transform): Idem

	* tests/AESTest.R (hextextToRaw): Print AES object
	* tests/AESTest.Rout.save: Updated

2016-12-08  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Register (and exported) makeRaw S3 methods

	* man/makeRaw.Rd: New manual page

	* tests/hmacTest.R: Direct call to makeRaw()
	* tests/hmacTest.Rout.save: Ditto

	* src/digest.c: Additional #nocov tags
	* src/xxhash.c: Ditto

2016-12-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Rolled minor version

	* README.md: Use shields.io badge for codecov

	* R/digest.R: Additional #nocov tags
	* src/sha2.c: Ditto
	* src/raes.c: Ditto

	* tests/hmacTest.R: Additional tests
	* tests/hmacTest.Rout.save: Ditto

2016-11-30  Dirk Eddelbuettel  <edd@debian.org>
