@@ -1,5 +1,5 @@
 .travis.yml
 ^.*\.Rproj$
 ^\.Rproj\.user$
-
 ^\.codecov\.yml$
+^.*\.tar\.gz$
